Project Page + Fixed general and nav layout
1) + Project page with basic elements; no current content
2) * Changed padding & width to stop main page from creating a scrollbar
3) + readded gitignore

--- a/css/global.css
+++ b/css/global.css
@@ -25,9 +25,9 @@
 .mainPage
 {
     float: right;
-    width: 85% ;
+    width: 84%;
     height: 100vh;
-    padding: 5px;
+    /*padding: 5px;*/
 }
 body{
     margin: 0;
